--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
